# city-generator

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile
.github/workflows/: tests.yml
docs/: README.md
include/: City.h  Config.h
paper/: paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex
python/: citygen_py.py  generate_city.py
src/: City.cpp  main.cpp
tests/: test_citygen.py
vapor-server/: Package.swift
vapor-server/Sources/App/Controllers/: GenerationController.swift
vapor-server/Sources/Run/: main.swift
